# Quantum-Circuit-Slicer

./: LICENSE  README.md  breakbarrier.py  setup.cfg  workfuncs.py
qcs/: breakbarrier.py  gatefinder.py  qcs.py  slicer.py
tests/: test.py
