[metadata]
name = Quantum Circuit Slicer (QCS)
version = 0.0.1
author = Sara Ayman Metwalli
author_email = sara@sfc.wide.ad.jp
description = A circuit slicer addition to Qiksit to help developers with debugging
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: GNU

[options]
packages = find:
python_requires = >=3.7
include_package_data = True